Unreviewed. Fix the inspector files combination after r255547
* UserInterface/Main.html: Remove Views/SizesToFitNavigationBar.js that was removed in r255547

Canonical link: https://commits.webkit.org/220111@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255557 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/ChangeLog
+++ b/Source/WebInspectorUI/ChangeLog
@@ -1,3 +1,9 @@
+2020-02-03  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        Unreviewed. Fix the inspector files combination after r255547
+
+        * UserInterface/Main.html: Remove Views/SizesToFitNavigationBar.js that was removed in r255547
+
 2020-02-01  Devin Rousso  <drousso@apple.com>
 
         Web Inspector: move the items in the toolbar into the tab bar to save vertical space
