Use std::hypot() where possible https://bugs.webkit.org/show_bug.cgi?id=198483
Reviewed by Carlos Garcia Campos.

Use std::hypot() where possible, allowing for a possibly more precise
calculation of square roots of sums of two or three square values.

Source/WebCore:

* css/CSSGradientValue.cpp:
(WebCore::horizontalEllipseRadius):
* platform/audio/FFTFrame.cpp:
(WebCore::FFTFrame::print):
* platform/graphics/FloatPoint.cpp:
(WebCore::FloatPoint::length const): Deleted.
* platform/graphics/FloatPoint.h:
(WebCore::FloatPoint::length const):
* platform/graphics/FloatPoint3D.h:
(WebCore::FloatPoint3D::length const):
* platform/graphics/FloatSize.cpp:
(WebCore::FloatSize::diagonalLength const): Deleted.
* platform/graphics/FloatSize.h:
(WebCore::FloatSize::diagonalLength const):
* platform/graphics/GeometryUtilities.cpp:
(WebCore::euclidianDistance):
* platform/graphics/GraphicsContext.cpp:
(WebCore::GraphicsContext::computeLineBoundsAndAntialiasingModeForText):
* platform/graphics/PathTraversalState.cpp:
(WebCore::distanceLine):
* platform/graphics/cairo/CairoOperations.cpp:
(WebCore::Cairo::computeLineBoundsAndAntialiasingModeForText):
* platform/graphics/cairo/PathCairo.cpp:
(WebCore::Path::addArcTo):
* platform/graphics/cg/GraphicsContextCG.cpp:
(WebCore::GraphicsContext::roundToDevicePixels):
* platform/graphics/filters/FETurbulence.cpp:
(WebCore::FETurbulence::initPaint):
* platform/graphics/transforms/AffineTransform.cpp:
(WebCore::AffineTransform::xScale const):
(WebCore::AffineTransform::yScale const):
* platform/graphics/transforms/RotateTransformOperation.cpp:
(WebCore::RotateTransformOperation::blend):
* platform/graphics/transforms/TransformationMatrix.cpp:
(WebCore::v3Length):
(WebCore::decompose2):
(WebCore::TransformationMatrix::rotate3d):
* rendering/RenderThemeIOS.mm:
(WebCore::shortened):
* rendering/style/BasicShapes.cpp:
(WebCore::BasicShapeCircle::floatValueForRadiusInBox const):
* rendering/svg/SVGRenderingContext.cpp:
(WebCore::SVGRenderingContext

--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,18 @@
+2020-02-03  Zan Dobersek  <zdobersek@igalia.com>
+
+        Use std::hypot() where possible
+        https://bugs.webkit.org/show_bug.cgi?id=198483
+
+        Reviewed by Carlos Garcia Campos.
+
+        Use std::hypot() where possible, allowing for a possibly more precise
+        calculation of square roots of sums of two or three square values.
+
+        * Platform/classifier/ResourceLoadStatisticsClassifier.cpp:
+        (WebKit::vectorLength):
+        * UIProcess/ios/forms/WKFocusedFormControlView.mm:
+        (-[WKFocusedFormControlView scrollOffsetForCrownInputOffset:]):
+
 2020-02-01  Michael Catanzaro  <mcatanzaro@gnome.org>
 
         Silence compiler warnings
