--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,14 @@
+2020-02-03  Jacob Uphoff  <jacob_uphoff@apple.com>
+
+        [macS wk2] LayoutTest/tiled-drawing/scrolling/scroll-snap/scroll-snap-mandatory-mainframe-vertical-then-horizontal.html is a flaky failure. (171839)
+        https://bugs.webkit.org/show_bug.cgi?id=171839
+
+        Removing "debug" as the failure is also happening on release.
+
+        Unreviewed test gardening
+
+        * platform/mac-wk2/TestExpectations:
+
 2020-02-02  Wenson Hsieh  <wenson_hsieh@apple.com>
 
         editing/input/composition-highlights.html fails on open source Mojave bots
