--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,14 @@
 2020-02-03  Jacob Uphoff  <jacob_uphoff@apple.com>
 
+        [ macOS wk2 ] tiled-drawing/scrolling/scroll-snap/scroll-snap-mandatory-then-proximity.html is flaky failing
+        https://bugs.webkit.org/show_bug.cgi?id=207120
+
+        Unreviewed test gardening
+
+        * platform/mac-wk2/TestExpectations:
+
+2020-02-03  Jacob Uphoff  <jacob_uphoff@apple.com>
+
         [ macOS wk2 ] webgpu/whlsl/nested-loop.html is flaky failing
         https://bugs.webkit.org/show_bug.cgi?id=207117
 
