Unreviewed, disable ResponsivenessTimer test in Debug / ASAN
The ResponsivenessTimer is disabled for those configurations as of r255518.

* TestWebKitAPI/Tests/WebKit/ResponsivenessTimerCrash.mm:

Canonical link: https://commits.webkit.org/220120@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255566 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,3 +1,11 @@
+2020-02-03  Chris Dumez  <cdumez@apple.com>
+
+        Unreviewed, disable ResponsivenessTimer test in Debug / ASAN
+
+        The ResponsivenessTimer is disabled for those configurations as of r255518.
+
+        * TestWebKitAPI/Tests/WebKit/ResponsivenessTimerCrash.mm:
+
 2020-02-03  Zan Dobersek  <zdobersek@igalia.com>
 
         Use std::hypot() where possible
