Unreviewed watchOS build fix after r255559- add missing semi-colon.
* UIProcess/ios/forms/WKFocusedFormControlView.mm:
(-[WKFocusedFormControlView scrollOffsetForCrownInputOffset:]):

Canonical link: https://commits.webkit.org/220121@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255567 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,10 @@
+2020-02-03  Keith Rollin  <krollin@apple.com>
+
+        Unreviewed watchOS build fix after r255559- add missing semi-colon.
+
+        * UIProcess/ios/forms/WKFocusedFormControlView.mm:
+        (-[WKFocusedFormControlView scrollOffsetForCrownInputOffset:]):
+
 2020-02-03  Zan Dobersek  <zdobersek@igalia.com>
 
         Use std::hypot() where possible
