[ macOS wk1 ] transitions/start-transform-transition.html is flaky failing https://bugs.webkit.org/show_bug.cgi?id=207125
Unreviewed test gardening

Patch by Jacob Uphoff <jacob_uphoff@apple.com> on 2020-02-03

* platform/mac-wk1/TestExpectations:

Canonical link: https://commits.webkit.org/220123@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255569 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,14 @@
 2020-02-03  Jacob Uphoff  <jacob_uphoff@apple.com>
 
+        [ macOS wk1 ] transitions/start-transform-transition.html is flaky failing
+        https://bugs.webkit.org/show_bug.cgi?id=207125
+
+        Unreviewed test gardening
+
+        * platform/mac-wk1/TestExpectations:
+
+2020-02-03  Jacob Uphoff  <jacob_uphoff@apple.com>
+
         [ macOS wk1 ] compositing/backing/animate-into-view.html is flaky timing out
         https://bugs.webkit.org/show_bug.cgi?id=207124
 
