--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,16 @@
 2020-02-03  Jacob Uphoff  <jacob_uphoff@apple.com>
 
+        inspector/heap/getRemoteObject.html is a flaky crash
+        https://bugs.webkit.org/show_bug.cgi?id=206903
+
+        Updating expectations for an existing bug
+
+        Unreviewed test gardening
+
+        * platform/mac-wk2/TestExpectations:
+
+2020-02-03  Jacob Uphoff  <jacob_uphoff@apple.com>
+
         [ macOS wk2 ] webgpu/whlsl/buffer-vertex.html is flaky failing
         https://bugs.webkit.org/show_bug.cgi?id=207127
 
