--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,14 @@
 2020-02-03  Jacob Uphoff  <jacob_uphoff@apple.com>
 
+        Flaky Test: inspector/worker/debugger-pause.html
+        https://bugs.webkit.org/show_bug.cgi?id=206285
+
+        Unreviewed test gardening
+
+        * platform/mac/TestExpectations:
+
+2020-02-03  Jacob Uphoff  <jacob_uphoff@apple.com>
+
         inspector/heap/getRemoteObject.html is a flaky crash
         https://bugs.webkit.org/show_bug.cgi?id=206903
 
