--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,12 @@
+2020-02-03  Jacob Uphoff  <jacob_uphoff@apple.com>
+
+        [ macOS wk2 ] inspector/canvas/create-context-2d.html is flaky failing
+        https://bugs.webkit.org/show_bug.cgi?id=207132
+
+        Unreviewed test gardening
+
+        * platform/mac/TestExpectations:
+
 2020-02-03  Truitt Savell  <tsavell@apple.com>
 
         Fix expectation after r255561 that needed to be just iPad
