--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,15 @@
+2020-02-03  Jason Lawrence  <lawrence.j@apple.com>
+
+        [ iOS wk2 ] compositing/backing/page-scale-overlap-in-iframe.html failing.
+        https://bugs.webkit.org/show_bug.cgi?id=207116
+
+        Unreviewed test gardening.
+
+        Added an expectation file for iPad.
+
+        * platform/ipad/TestExpectations:
+        * platform/ipad/compositing/backing/page-scale-overlap-in-iframe-expected.txt: Added.
+
 2020-02-03  Jacob Uphoff  <jacob_uphoff@apple.com>
 
         REGRESSION: [ macOS wk1 ] css3/selectors3/xml/css3-modsel-d2.xml is flaky failing
