--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,12 @@
+2020-02-03  Jacob Uphoff  <jacob_uphoff@apple.com>
+
+        REGRESSION: [ macOS wk2 ] inspector/canvas/create-context-bitmaprenderer.html is flaky failing
+        https://bugs.webkit.org/show_bug.cgi?id=207141
+
+        Unreviewed test gardening.
+
+        * platform/mac-wk2/TestExpectations:
+
 2020-02-03  Jason Lawrence  <lawrence.j@apple.com>
 
         [ iOS wk2 ] compositing/backing/page-scale-overlap-in-iframe.html failing.
