--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,12 @@
+2020-02-03  Jason Lawrence  <lawrence.j@apple.com>
+
+        [ Mac ] requestidlecallback/requestidlecallback-is-called.html flaky failing.
+        https://bugs.webkit.org/show_bug.cgi?id=207142
+
+        Unreviewed test gardening.
+
+        * platform/mac/TestExpectations:
+
 2020-02-03  Jacob Uphoff  <jacob_uphoff@apple.com>
 
         REGRESSION: [ macOS wk2 ] inspector/canvas/create-context-bitmaprenderer.html is flaky failing
