Layout Test svg/custom/object-sizing-explicit-width.xhtml is a flaky failure. https://bugs.webkit.org/show_bug.cgi?id=181058
Unreviewed test gardening.

Patch by Jacob Uphoff <jacob_uphoff@apple.com> on 2020-02-03

* platform/mac-wk1/TestExpectations:

Canonical link: https://commits.webkit.org/220141@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255589 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,14 @@
 2020-02-03  Jacob Uphoff  <jacob_uphoff@apple.com>
 
+        Layout Test svg/custom/object-sizing-explicit-width.xhtml is a flaky failure.
+        https://bugs.webkit.org/show_bug.cgi?id=181058
+
+        Unreviewed test gardening.
+
+        * platform/mac-wk1/TestExpectations:
+
+2020-02-03  Jacob Uphoff  <jacob_uphoff@apple.com>
+
         [ macOS wk1 ] media/modern-media-controls/compact-media-controls/compact-media-controls-constructor.html is flaky failing (192974)
         https://bugs.webkit.org/show_bug.cgi?id=192974
 
