[WebKitTestRunner] setOpenPanelFiles support in non-local tests https://bugs.webkit.org/show_bug.cgi?id=206517
Reviewed by Carlos Alberto Lopez Perez.

Tools:

* WebKitTestRunner/InjectedBundle/TestRunner.cpp:
(WTR::TestRunner::setOpenPanelFiles): Use file:// if the passed path
starts with a leading slash instead of using the test URL, which could
cause input forms with invalid file data.

LayoutTests:

* platform/gtk/TestExpectations: Update expectations after fix.


Canonical link: https://commits.webkit.org/220142@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255590 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,12 @@
+2020-02-03  Lauro Moura  <lmoura@igalia.com>
+
+        [WebKitTestRunner] setOpenPanelFiles support in non-local tests
+        https://bugs.webkit.org/show_bug.cgi?id=206517
+
+        Reviewed by Carlos Alberto Lopez Perez.
+
+        * platform/gtk/TestExpectations: Update expectations after fix.
+
 2020-02-03  Jacob Uphoff  <jacob_uphoff@apple.com>
 
         Layout Test svg/custom/object-sizing-explicit-width.xhtml is a flaky failure.
