[ macOS wk1 ] inspector/canvas/recording-webgl-full.html  is flaky timing out https://bugs.webkit.org/show_bug.cgi?id=207145
Updating expectations

Unreviewed test gardening.

Patch by Jacob Uphoff <jacob_uphoff@apple.com> on 2020-02-03

* platform/mac-wk1/TestExpectations:

Canonical link: https://commits.webkit.org/220143@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255591 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,14 @@
+2020-02-03  Jacob Uphoff  <jacob_uphoff@apple.com>
+
+        [ macOS wk1 ] inspector/canvas/recording-webgl-full.html  is flaky timing out
+        https://bugs.webkit.org/show_bug.cgi?id=207145
+
+        Updating expectations
+
+        Unreviewed test gardening.
+
+        * platform/mac-wk1/TestExpectations:
+
 2020-02-03  Lauro Moura  <lmoura@igalia.com>
 
         [WebKitTestRunner] setOpenPanelFiles support in non-local tests
