--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,3 +1,20 @@
+2020-02-03  Chris Dumez  <cdumez@apple.com>
+
+        Regression(r253224) WKUIDelegate.webViewDidClose may get called twice after calling _tryClose on the WKWebView
+        https://bugs.webkit.org/show_bug.cgi?id=207121
+        <rdar://problem/58880177>
+
+        Reviewed by Alex Christensen.
+
+        Add API test coverage.
+
+        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
+        * TestWebKitAPI/Tests/WebKit/beforeunload-slow.html: Added.
+        * TestWebKitAPI/Tests/WebKitCocoa/ModalAlerts.mm:
+        (-[SlowBeforeUnloadHandlerUIDelegate _webView:runBeforeUnloadConfirmPanelWithMessage:initiatedByFrame:completionHandler:]):
+        (-[SlowBeforeUnloadHandlerUIDelegate webViewDidClose:]):
+        (TEST):
+
 2020-02-03  Lauro Moura  <lmoura@igalia.com>
 
         [WebKitTestRunner] setOpenPanelFiles support in non-local tests
