--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,14 @@
+2020-02-03  Jacob Uphoff  <jacob_uphoff@apple.com>
+
+       [iOS] Layout Test animations/duplicate-keys.html is a flaky failure
+        https://bugs.webkit.org/show_bug.cgi?id=185332
+
+        Updating on macOS wk1 because the same failure is also seen there
+
+        Unreviewed test gardening.
+
+        * platform/mac-wk1/TestExpectations:
+
 2020-02-03  Jason Lawrence  <lawrence.j@apple.com>
 
         [ Mac ] legacy-animation-engine/compositing/geometry/partial-layout-update.html is flaky failing.
