--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,12 @@
+2020-02-03  Jason Lawrence  <lawrence.j@apple.com>
+
+        [ Mojave wk2 ] imported/w3c/web-platform-tests/webrtc/RTCDtlsTransport-state.html is flaky failing.
+        https://bugs.webkit.org/show_bug.cgi?id=207149
+
+        Unreviewed test gardening.
+
+        * platform/mac-wk2/TestExpectations:
+
 2020-02-03  Jacob Uphoff  <jacob_uphoff@apple.com>
 
        [iOS] Layout Test animations/duplicate-keys.html is a flaky failure
