[ macOS iOS ] fast/dom/connected-subframe-counter-overflow.html is flaky timing out https://bugs.webkit.org/show_bug.cgi?id=207152
Unreviewed test gardening.

Patch by Jacob Uphoff <jacob_uphoff@apple.com> on 2020-02-03

* platform/ios/TestExpectations:
* platform/mac/TestExpectations:

Canonical link: https://commits.webkit.org/220154@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255602 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,13 @@
+2020-02-03  Jacob Uphoff  <jacob_uphoff@apple.com>
+
+        [ macOS iOS ] fast/dom/connected-subframe-counter-overflow.html is flaky timing out
+        https://bugs.webkit.org/show_bug.cgi?id=207152
+
+        Unreviewed test gardening.
+
+        * platform/ios/TestExpectations:
+        * platform/mac/TestExpectations:
+
 2020-02-03  Jason Lawrence  <lawrence.j@apple.com>
 
         [ Mac wk2 Release ] fast/dom/navigator-detached-no-crash.html flaky failing.
