--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,17 @@
+2020-02-03  Wenson Hsieh  <wenson_hsieh@apple.com>
+
+        [iOS 13] Dragging on-screen volume control on a YouTube video selects text around the panel
+        https://bugs.webkit.org/show_bug.cgi?id=207140
+        <rdar://problem/58852938>
+
+        Reviewed by Tim Horton.
+
+        Add a layout test to verify that we don't allow text selection gestures inside of containers that have both
+        `user-drag: element` and `user-select: none`.
+
+        * editing/selection/ios/prefer-drag-over-text-selection-expected.txt: Added.
+        * editing/selection/ios/prefer-drag-over-text-selection.html: Added.
+
 2020-02-03  Jacob Uphoff  <jacob_uphoff@apple.com>
 
         [ macOS iOS ] fast/dom/connected-subframe-counter-overflow.html is flaky timing out
