--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,12 @@
+2020-02-03  Jason Lawrence  <lawrence.j@apple.com>
+
+        [ iOS wk2 ] animations/animation-callback-timestamp.html is flaky failing.
+        https://bugs.webkit.org/show_bug.cgi?id=207153
+
+        Unreviewed test gardening.
+
+        * platform/ios-wk2/TestExpectations:
+
 2020-02-03  Wenson Hsieh  <wenson_hsieh@apple.com>
 
         [iOS 13] Dragging on-screen volume control on a YouTube video selects text around the panel
