--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,12 @@
+2020-02-03  Jason Lawrence  <lawrence.j@apple.com>
+
+        [ iOS wk2 Release ] http/tests/websocket/tests/hybi/workers/close.html is flaky failing.
+        https://bugs.webkit.org/show_bug.cgi?id=207156
+
+        Unreviewed test gardening.
+
+        * platform/ios-wk2/TestExpectations:
+
 2020-02-03  Jacob Uphoff  <jacob_uphoff@apple.com>
 
         [ macOS wk1 ] inspector/canvas/recording-2d-full.html is flaky timing out
