--- a/Source/WTF/ChangeLog
+++ b/Source/WTF/ChangeLog
@@ -1,3 +1,61 @@
+2020-02-03  Alex Christensen  <achristensen@webkit.org>
+
+        Reduce size of HashMap and HashSet
+        https://bugs.webkit.org/show_bug.cgi?id=207138
+
+        Reviewed by Yusuke Suzuki.
+
+        This reduces sizeof(HashMap) and sizeof(HashSet) from 24 to 8 on 64-bit systems.
+        I measured that the overwhelming majority of HashMaps and HashSets never see more than 0 elements,
+        so I moved the table metadata (tableSize, tableSizeMask, keyCount, deletedCount) to inside the
+        dynamically allocated memory.  This makes another branch in size() for non-empty tables
+        and an additional read and write when rehashing in exchange for fewer writes in the constructor
+        and increased cache locality of everything that uses HashMap and HashSet, which is basically everything.
+
+        * wtf/HashTable.h:
+        (WTF::HashTable::~HashTable):
+        (WTF::HashTable::end):
+        (WTF::HashTable::end const):
+        (WTF::HashTable::random):
+        (WTF::HashTable::size const):
+        (WTF::HashTable::capacity const):
+        (WTF::HashTable::isEmpty const):
+        (WTF::HashTable::reserveInitialCapacity):
+        (WTF::HashTable::shouldExpand const):
+        (WTF::HashTable::mustRehashInPlace const):
+        (WTF::HashTable::shouldShrink const):
+        (WTF::HashTable::shrink):
+        (WTF::HashTable::makeIterator):
+        (WTF::HashTable::makeConstIterator const):
+        (WTF::HashTable::makeKnownGoodIterator):
+        (WTF::HashTable::makeKnownGoodConstIterator const):
+        (WTF::HashTable::tableSize const):
+        (WTF::HashTable::setTableSize const):
+        (WTF::HashTable::tableSizeMask const):
+        (WTF::HashTable::setTableSizeMask):
+        (WTF::HashTable::keyCount const):
+        (WTF::HashTable::setKeyCount const):
+        (WTF::HashTable::deletedCount const):
+        (WTF::HashTable::setDeletedCount const):
+        (WTF::KeyTraits>::HashTable):
+        (WTF::KeyTraits>::inlineLookup):
+        (WTF::KeyTraits>::lookupForWriting):
+        (WTF::KeyTraits>::fullLookupForWriting):
+        (WTF::KeyTraits>::addUniqueForInitialization):
+        (WTF::KeyTraits>::add):
+        (WTF::KeyTraits>::addPassingHashCode):
+        (WTF::KeyTraits>::remove):
+        (WTF::KeyTraits>::removeIf):
+        (WTF::KeyTraits>::allocateTable):
+        (WTF::KeyTraits>::deallocateTable):
+        (WTF::KeyTraits>::expand):
+        (WTF::KeyTraits>::shrinkToBestSize):
+        (WTF::KeyTraits>::deleteReleasedWeakBuckets):
+        (WTF::KeyTraits>::rehash):
+        (WTF::KeyTraits>::clear):
+        (WTF::KeyTraits>::swap):
+        (WTF::KeyTraits>::checkTableConsistencyExceptSize const):
+
 2020-02-03  Sam Weinig  <weinig@apple.com>
 
         Start splitting platform specific overrides of default enable behavior into their own files
