--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,3 +1,15 @@
+2020-02-03  Alex Christensen  <achristensen@webkit.org>
+
+        Reduce size of HashMap and HashSet
+        https://bugs.webkit.org/show_bug.cgi?id=207138
+
+        Reviewed by Yusuke Suzuki.
+
+        * TestWebKitAPI/Tests/WTF/HashMap.cpp:
+        (TestWebKitAPI::TEST):
+        * TestWebKitAPI/Tests/WTF/HashSet.cpp:
+        (TestWebKitAPI::TEST):
+
 2020-02-03  Alexey Shvayka  <shvaikalesh@gmail.com>
 
         obsolete_attachment should not fail when flags do not exist
