--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,14 @@
 2020-02-03  Jacob Uphoff  <jacob_uphoff@apple.com>
 
+        [ macOS wk1 ] css2.1/20110323/replaced-intrinsic-ratio-001.htm is flaky failing
+        https://bugs.webkit.org/show_bug.cgi?id=207160
+
+        Unreviewed test gardening.
+
+        * platform/mac-wk1/TestExpectations:
+
+2020-02-03  Jacob Uphoff  <jacob_uphoff@apple.com>
+
         REGRESSION: [ macOS wk1 ] inspector/debugger/tail-deleted-frames/tail-deleted-frames-scopes.html is flaky timing out
         https://bugs.webkit.org/show_bug.cgi?id=207157
 
