--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,14 @@
 2020-02-03  Jason Lawrence  <lawrence.j@apple.com>
 
+        [iOS wk2 Debug] legacy-animation-engine/animations/play-state-in-shorthand.html is flaky failing.
+        https://bugs.webkit.org/show_bug.cgi?id=207164
+
+        Unreviewed test gardening.
+
+        * platform/ios-wk2/TestExpectations:
+
+2020-02-03  Jason Lawrence  <lawrence.j@apple.com>
+
         Regression: (254414?) [ iOS wk2 ] imported/w3c/web-platform-tests/2dcontext/imagebitmap/createImageBitmap-transfer.html is flaky failing. 
         https://bugs.webkit.org/show_bug.cgi?id=207161
 
