LayoutTest inspector/controller/runtime-controller-import.html is a flaky timeout https://bugs.webkit.org/show_bug.cgi?id=168926
Updating because the test is also flaky failing.

Unreviewed test gardening.

Patch by Jacob Uphoff <jacob_uphoff@apple.com> on 2020-02-03

* platform/mac/TestExpectations:

Canonical link: https://commits.webkit.org/220169@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255618 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,16 @@
 2020-02-03  Jacob Uphoff  <jacob_uphoff@apple.com>
 
+        LayoutTest inspector/controller/runtime-controller-import.html is a flaky timeout
+        https://bugs.webkit.org/show_bug.cgi?id=168926
+
+        Updating because the test is also flaky failing.
+
+        Unreviewed test gardening.
+
+        * platform/mac/TestExpectations:
+
+2020-02-03  Jacob Uphoff  <jacob_uphoff@apple.com>
+
         [ macOS wk1 ] inspector/heap/imported-snapshot.html is flaky timeout
         https://bugs.webkit.org/show_bug.cgi?id=207163
 
