--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,14 @@
 2020-02-03  Jason Lawrence  <lawrence.j@apple.com>
 
+        [ Mac wk2 ] http/wpt/mediarecorder/MediaRecorder-AV-audio-video-dataavailable-gpuprocess.html is flaky failing.
+        https://bugs.webkit.org/show_bug.cgi?id=207166
+
+        Unreviewed test gardening.
+
+        * platform/mac-wk2/TestExpectations:
+
+2020-02-03  Jason Lawrence  <lawrence.j@apple.com>
+
         [ Mac wk2 ] tiled-drawing/scrolling/scroll-snap/scroll-snap-mandatory-padding.html is flaky failing. 
         https://bugs.webkit.org/show_bug.cgi?id=207165
 
