--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,3 +1,13 @@
+2020-02-03  Jonathan Bedard  <jbedard@apple.com>
+
+        results.webkit.org: Support jsc stress tests
+        https://bugs.webkit.org/show_bug.cgi?id=204096
+
+        Rubber-stamped by Aakash Jain.
+
+        * Scripts/run-javascriptcore-tests:
+        (runJSCStressTests): Add pass and failures to reported results.
+
 2020-02-03  Alexey Shvayka  <shvaikalesh@gmail.com>
 
         Make Bugzilla._find_select_element_for_flag more robust
